# PAD2Skills

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: project_overview.instructions.md
configs/: base.yaml
data/silver/: esco_occupations_prepared.csv
data/silver/abbreviations_md/: P075941_abbr.md
data/silver/choose_esco_csv/: P075941_esco_selections.csv
data/silver/choose_esco_json/: P075941_000-074_esco_selection.json  P075941_075-149_esco_selection.json  (+2 more)
docs/: api-platform-openai-devicecode-credentials 7 50 (1) 38.ipynb  notes.md  pdf_conversion.md
notebooks/: 01_test_pdf_conversion.ipynb  01b_pdf_to_images_test.ipynb  02_document_sections.ipynb  03_extract_occupations_skills.ipynb  03_pad_summary.ipynb  04_extract_occupations_skills.ipynb  04_match_occupations_esco.ipynb  05_esco_selection.ipynb  05_match_occupations_esco.ipynb  06_esco_selection.ipynb  06_nace_codes.ipynb  99_pipeline.ipynb
prompts/: choose_esco_match.md  document_sections.md  occupations_skills.md  pad_summary.md  parse_abbreviations.md
src/: __init__.py  config.py
src/extraction/: __init__.py  __main__.py  cli_abbreviations.py  cli_chunks.py  cli_occupations.py  cli_sections.py  cli_summary.py  extractor.py  occupations_extractor.py  summarizer.py
src/matching/: __init__.py  cli_match_pads.py  cli_prepare_esco.py  esco_prepare.py  pad_matcher.py
src/pdf_conversion/: __init__.py  __main__.py  cli.py  converter.py
tests/: test_extraction.py  test_matching.py  test_pdf_conversion.py
(+19 files in other folders)
